Persist contribution availability for needs
